[package]
name = "nickslinetoolsrust"
version = "1.2.0"
authors = ["thehappycheese"]
repository = "https://github.com/thehappycheese/nicks_line_tools_rust.git"
readme = "README.MD"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"] }